CHANGES IN VERSION 1.25.0
------------------------

MODIFICATIONS

    o 1.25.2 Changed makeAnnotationHubMetadata to point to Azure instead of AWS

CHANGES IN VERSION 1.21.0
------------------------

MODIFICATIONS

    o 1.21.9 Add PNG as valid source type
    o 1.21.4 Removed vignette for creating annotation hub package. Reference and
    refer to single vignette in AnnotationHub 
    o 1.21.3 Tags for database now combination of biocViews and meta$Tags. Also
    checks for valid AnnotationHub or AnnotationHubSoftware biocViews.
    o 1.21.2 Add mtx.gz as valid source type

BUG CORRECTION

    o 1.21.3 Fixed bug to run make*HubMetadata using "."

INTERNAL BUG CORRECTION

    o 1.21.1 misplaced ! clause

REMOVED

    o 1.21.5 Removed BioPax. url no longer valid. Resources were old and never
    used beyond first addition

CHANGES IN VERSION 1.19.0
------------------------

INTERNAL BUG CORRECTION

    o 1.19.2 Update Metadata from Ensembl function to use
    GenomeInfoDb:::fetch_species_index_from_Ensembl_FTP instead of parsing the
    file path
    o 1.19.1 misplaced ! clause
 

CHANGES IN VERSION 1.17.0
------------------------

MODIFICATIONS

    o 1.17.3 add check for valid Title and Description in metadata file. It
    should not be empty or NA
    o 1.17.2 add XML as valid source type
    o 1.17.1 add GSEMatrix as valid source type

CHANGES IN VERSION 1.15.0
------------------------

MODIFICATIONS

    o 1.15.13 Added "BLOB" as a valid source type
    o 1.15.7 Added "MTX" as a valid source type
    o 1.15.6 Expanded documentation to clarify that data can be hosted
    publically not strictly Bioconductor AWS
    o 1.15.4 Added "XLS/XLSX" as valid source type

INTERNAL BUG CORRECTION

    o 1.15.11 updated GencodeGFF recipes for potential future use (still would
    revisit this with another update to do like ensembl on the fly)
    o 1.15.5 remove validity check that is wrong/outdated
    o 1.15.1 needToRerunNonStandardOrgDb added as helper function for when