@@ -1,7 +1,7 @@
 Package: AnnotationHubData
 Type: Package
 Title: Transform public data resources into Bioconductor Data Structures
-Version: 1.25.4
+Version: 1.25.5
 Encoding: UTF-8
 Authors@R: c(
 	person("Martin", "Morgan", role="ctb"),
