@@ -1,6 +1,10 @@
 CHANGES IN VERSION 1.25.0
 ------------------------
 
+NEW FEATURES
+
+    o 1.25.5 Add helper function to upload to azure
+
 MODIFICATIONS
 
     o 1.25.2 Changed makeAnnotationHubMetadata to point to Azure instead of AWS
